--- a/css/common.css
+++ b/css/common.css
@@ -30,6 +30,18 @@ body {
 
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Container */
+
+.container {
+  margin-left: auto;
+  margin-top: auto;
+  width: 1200;
+  outline: 2px solid tomato;
+  background-color: turquoise;
 }
 
 /* Header */
