--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Hero */
 
 .hero {
-  background: #2f303a;
+  background-image: url(.jpg);
 }
 
 .hero-title {
@@ -12,16 +12,21 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: grey;
+  margin-bottom: 30px;
 }
 
 /* Button */
 
 .button.hero {
+  display: flex;
   color: var(--primary-wight-color);
   background-color: var(--accent-pick-color);
   text-decoration: none;
-  width: 200px;
-  height: 50px;
+  min-width: 200px;
+  min-height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
@@ -30,6 +35,7 @@
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+  padding: 10px 32px;
 }
 
 /* Advantages */
