--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,6 +7,7 @@
 /* Button-filter */
 
 .button.filter {
+  display: inline-block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -17,6 +18,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
   border: none;
+  padding: 6px 22px;
 }
 
 .button.filter:hover,
