--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,6 +29,15 @@
 
 /* Gallery  */
 
+.gallery {
+  margin-top: 34px;
+  margin-bottom: 0px;
+}
+.gallery li {
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
 .gallery a {
   text-decoration: none;
 }
@@ -39,6 +48,8 @@
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--fttitle-text-color);
+  margin-top: 20px;
+  margin-bottom: 0px;
 }
 
 .gallery p {
@@ -46,4 +57,6 @@
   font-size: 16px;
   line-height: 1.88;
   color: var(--ftprimary-text-color);
+  margin-top: 4px;
+  margin-bottom: 0pc;
 }
