--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,10 +1,27 @@
-/* Filter */
+/* Our-works */
 
-.filter {
-  list-style: none;
+.our-works {
+  display: block;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 /* Button-filter */
+
+.filter {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  margin-top: 0;
+  margin-bottom: 0px;
+  padding: 0;
+  align-items: center;
+}
+
+.filter .item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .button.filter {
   display: inline-block;
@@ -30,12 +47,25 @@
 /* Gallery  */
 
 .gallery {
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 34px;
   margin-bottom: 0px;
 }
-.gallery li {
-  margin-top: 30px;
-  margin-bottom: 0px;
+
+.gallery .item {
+  width: calc((100% - 30px * 2) / 3);
+  margin-top: 0px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+
+.gallery .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.gallery .item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .gallery a {
@@ -50,13 +80,15 @@
   color: var(--fttitle-text-color);
   margin-top: 20px;
   margin-bottom: 0px;
+  margin-left: 24px;
 }
 
-.gallery p {
+.gallery .text {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.88;
   color: var(--ftprimary-text-color);
   margin-top: 4px;
   margin-bottom: 0pc;
+  margin-left: 24px;
 }
