--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,6 +58,8 @@
   margin-top: 0px;
   margin-bottom: 30px;
   margin-right: 30px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
 }
 
 .gallery .item:nth-last-child(-n + 3) {
@@ -89,6 +91,6 @@
   line-height: 1.88;
   color: var(--ftprimary-text-color);
   margin-top: 4px;
-  margin-bottom: 0pc;
+  margin-bottom: 20px;
   margin-left: 24px;
 }
