--- a/css/common.css
+++ b/css/common.css
@@ -161,6 +161,9 @@ body {
 .page-footer {
   background-color: #2f303a;
   padding: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
 }
 
 address {
