--- a/css/common.css
+++ b/css/common.css
@@ -59,6 +59,9 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
 }
 
 .header-logo {
