--- a/css/common.css
+++ b/css/common.css
@@ -63,6 +63,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
+  padding-left: 15px;
 }
 
 .header-logo {
@@ -161,7 +162,9 @@ body {
 
 .page-footer {
   background-color: #2f303a;
-  padding: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
