--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -62,6 +62,10 @@
   box-sizing: border-box;
 }
 
+.item img {
+  width: 100%;
+}
+
 .gallery .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
