--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,11 @@
 /* Hero */
 
-.hero-img {
+.hero.section {
+  text-align: center;
+  padding: 200px 452px;
   background-image: url(https://github.com/Kostyant1n/goit-markup-hw-03/blob/main/images/hero.jpg?raw=true);
   min-width: 1600px;
   min-height: 600px;
-}
-
-.hero {
-  text-align: center;
-  padding: 200px 452px;
 }
 
 .hero-title {
