--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@
   margin-bottom: 10px;
 }
 
-.benefits .section {
+.benefits {
   padding-top: 94px;
   padding-bottom: 0px;
   margin-bottom: 0px;
@@ -121,7 +121,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 0px;
   text-align: center;
   margin-right: 0px;
@@ -136,6 +136,11 @@
 .our-team .item {
   width: calc((100% - 30px * 3) / 4);
   margin-right: 30px;
+
+  background-color: var(--primary-wight-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team .item:nth-child(4n) {
@@ -148,7 +153,7 @@
   line-height: 1.19;
   color: var(--primary-text-color);
   margin-top: 10px;
-  margin-bottom: 0px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
