--- a/css/common.css
+++ b/css/common.css
@@ -133,6 +133,7 @@ body {
 .contacts-header .contact {
   display: block;
   align-items: center;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
