--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
 .button.hero {
   display: inline-block;
-  color: var(--primary-wight-color);
+  color: var(--btn-wight-color);
   background-color: var(--accent-pick-color);
   text-decoration: none;
   min-width: 200px;
@@ -144,7 +144,6 @@
 .our-team .item {
   width: calc((100% - 30px * 3) / 4);
   margin-right: 30px;
-
   background-color: var(--primary-wight-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
