--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,14 @@
   display: block;
   text-align: center;
   padding: 200px 0;
-  min-width: 1600px;
+  max-width: 1600px;
   min-height: 600px;
   background-color: var(--background-grey-color);
   background-image: url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -21,6 +23,9 @@
   text-transform: uppercase;
   margin-top: 0px;
   margin-bottom: 30px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Button */
@@ -129,11 +134,15 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 0px;
   text-align: center;
   margin-right: 0px;
   margin-left: 0px;
+}
+
+.our-team .caption {
+  margin: 30px;
 }
 
 .our-team {
@@ -160,7 +169,7 @@
   line-height: 1.19;
   color: var(--primary-text-color);
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
