--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -32,7 +32,7 @@
   color: var(--fttitle-text-color);
   background: var(--ftprimary-wight-color);
   border-radius: 4px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
   cursor: pointer;
   border: none;
   padding: 6px 22px;
@@ -42,6 +42,7 @@
 .button.filter:focus {
   color: var(--ftprimary-wight-color);
   background-color: var(--ftaccent-pick-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 /* Gallery  */
@@ -49,7 +50,7 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 34px;
+  margin-top: 50px;
   margin-bottom: 0px;
 }
 
@@ -83,6 +84,7 @@
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
+  padding: 20px 24px;
 }
 
 .gallery a {
@@ -97,8 +99,6 @@
   color: var(--fttitle-text-color);
   margin-top: 0px;
   margin-bottom: 0px;
-  padding-top: 20px;
-  padding-left: 24px;
 }
 
 .gallery .text {
@@ -107,7 +107,5 @@
   line-height: 1.88;
   color: var(--ftprimary-text-color);
   padding-top: 4px;
-  padding-bottom: 20px;
-  padding-left: 24px;
   margin: 0px;
 }
