--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@
 .benefits {
   padding-top: 94px;
   padding-bottom: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 47px;
   margin-top: 0px;
 }
 
@@ -81,6 +81,9 @@
 }
 
 /* Work */
+.our-works {
+  margin-top: 47px;
+}
 
 .work {
   display: flex;
