--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,8 @@
 
 .benefits {
   padding-top: 94px;
-  padding-bottom: 0px;
-  margin-bottom: 47px;
+  padding-bottom: 47px;
+  margin-bottom: 0px;
   margin-top: 0px;
 }
 
@@ -82,7 +82,7 @@
 
 /* Work */
 .our-works {
-  margin-top: 47px;
+  padding-top: 47px;
 }
 
 .work {
